parser.output
   0  $accept : %entry% $end

   1  program : block DOT

   2  block : decl_list BEGIN stmts END

   3  decl_list :
   4            | decl decl_list

   5  decl : CONST const_decls
   6       | VAR var_decls
   7       | proc_decl
   8       | TYPE type_decls

   9  const_decls : const_decl
  10              | const_decl const_decls

  11  const_decl : IDENT EQUAL expr SEMI

  12  type_decls : type_decl
  13             | type_decl type_decls

  14  type_decl : IDENT EQUAL typexpr SEMI

  15  var_decls : var_decl
  16            | var_decl var_decls

  17  var_decl : ident_list COLON reg typexpr SEMI

  18  reg :
  19      | REG

  20  proc_decl : proc_heading SEMI block SEMI

  21  proc_heading : PROC name params return_type

  22  params : LPAR RPAR
  23         | LPAR formal_decls RPAR

  24  formal_decls : formal_decl
  25               | formal_decl SEMI formal_decls

  26  formal_decl : ident_list COLON typexpr
  27              | VAR ident_list COLON typexpr
  28              | proc_heading

  29  return_type :
  30              | COLON typexpr

  31  stmts : stmt_list

  32  stmt_list : stmt
  33            | stmt SEMI stmt_list

  34  stmt : line stmt1
  35       | IMPOSSIBLE

  36  line :

  37  stmt1 :
  38        | variable ASSIGN expr
  39        | name actuals
  40        | RETURN expr_opt
  41        | IF expr THEN stmts elses END
  42        | WHILE expr DO stmts END
  43        | REPEAT stmts UNTIL expr
  44        | FOR name ASSIGN expr TO expr DO stmts END
  45        | CASE expr OF arms else_part END

  46  elses :
  47        | ELSE stmts
  48        | ELSIF line expr THEN stmts elses

  49  arms : arm
  50       | arm VBAR arms

  51  arm : expr COLON stmts

  52  else_part :
  53            | ELSE stmts

  54  ident_list : IDENT
  55             | IDENT COMMA ident_list

  56  expr_opt :
  57           | expr

  58  expr : variable
  59       | NUMBER
  60       | STRING
  61       | CHAR
  62       | NIL
  63       | name actuals
  64       | NOT expr
  65       | MINUS expr
  66       | expr MULOP expr
  67       | expr ADDOP expr
  68       | expr MINUS expr
  69       | expr RELOP expr
  70       | expr EQUAL expr
  71       | LPAR expr RPAR

  72  actuals : LPAR RPAR
  73          | LPAR expr_list RPAR

  74  expr_list : expr
  75            | expr COMMA expr_list

  76  variable : name
  77           | variable SUB expr BUS
  78           | variable DOT name
  79           | variable ARROW

  80  typexpr : name
  81          | ARRAY expr OF typexpr
  82          | RECORD fields END
  83          | POINTER TO typexpr

  84  fields : field_decl opt_semi
  85         | field_decl SEMI fields

  86  field_decl : ident_list COLON typexpr

  87  opt_semi : SEMI
  88           |

  89  name : IDENT

  90  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (90)
	decl_list : .  (3)

	CONST  shift 3
	PROC  shift 4
	TYPE  shift 5
	VAR  shift 6
	BEGIN  reduce 3

	program  goto 7
	block  goto 8
	decl_list  goto 9
	decl  goto 10
	proc_decl  goto 11
	proc_heading  goto 12


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	decl : CONST . const_decls  (5)

	IDENT  shift 13
	.  error

	const_decls  goto 14
	const_decl  goto 15


state 4
	proc_heading : PROC . name params return_type  (21)

	IDENT  shift 16
	.  error

	name  goto 17


state 5
	decl : TYPE . type_decls  (8)

	IDENT  shift 18
	.  error

	type_decls  goto 19
	type_decl  goto 20


state 6
	decl : VAR . var_decls  (6)

	IDENT  shift 21
	.  error

	var_decls  goto 22
	var_decl  goto 23
	ident_list  goto 24


state 7
	%entry% : '\001' program .  (90)

	.  reduce 90


state 8
	program : block . DOT  (1)

	DOT  shift 25
	.  error


state 9
	block : decl_list . BEGIN stmts END  (2)

	BEGIN  shift 26
	.  error


state 10
	decl_list : decl . decl_list  (4)
	decl_list : .  (3)

	CONST  shift 3
	PROC  shift 4
	TYPE  shift 5
	VAR  shift 6
	BEGIN  reduce 3

	decl_list  goto 27
	decl  goto 10
	proc_decl  goto 11
	proc_heading  goto 12


state 11
	decl : proc_decl .  (7)

	.  reduce 7


state 12
	proc_decl : proc_heading . SEMI block SEMI  (20)

	SEMI  shift 28
	.  error


state 13
	const_decl : IDENT . EQUAL expr SEMI  (11)

	EQUAL  shift 29
	.  error


state 14
	decl : CONST const_decls .  (5)

	.  reduce 5


state 15
	const_decls : const_decl .  (9)
	const_decls : const_decl . const_decls  (10)

	IDENT  shift 13
	BEGIN  reduce 9
	CONST  reduce 9
	PROC  reduce 9
	TYPE  reduce 9
	VAR  reduce 9

	const_decls  goto 30
	const_decl  goto 15


state 16
	name : IDENT .  (89)

	.  reduce 89


state 17
	proc_heading : PROC name . params return_type  (21)

	LPAR  shift 31
	.  error

	params  goto 32


state 18
	type_decl : IDENT . EQUAL typexpr SEMI  (14)

	EQUAL  shift 33
	.  error


state 19
	decl : TYPE type_decls .  (8)

	.  reduce 8


state 20
	type_decls : type_decl .  (12)
	type_decls : type_decl . type_decls  (13)

	IDENT  shift 18
	BEGIN  reduce 12
	CONST  reduce 12
	PROC  reduce 12
	TYPE  reduce 12
	VAR  reduce 12

	type_decls  goto 34
	type_decl  goto 20


state 21
	ident_list : IDENT .  (54)
	ident_list : IDENT . COMMA ident_list  (55)

	COMMA  shift 35
	COLON  reduce 54


state 22
	decl : VAR var_decls .  (6)

	.  reduce 6


state 23
	var_decls : var_decl .  (15)
	var_decls : var_decl . var_decls  (16)

	IDENT  shift 21
	BEGIN  reduce 15
	CONST  reduce 15
	PROC  reduce 15
	TYPE  reduce 15
	VAR  reduce 15

	var_decls  goto 36
	var_decl  goto 23
	ident_list  goto 24


state 24
	var_decl : ident_list . COLON reg typexpr SEMI  (17)

	COLON  shift 37
	.  error


state 25
	program : block DOT .  (1)

	.  reduce 1


state 26
	block : decl_list BEGIN . stmts END  (2)
	line : .  (36)

	IMPOSSIBLE  shift 38
	IDENT  reduce 36
	SEMI  reduce 36
	END  reduce 36
	IF  reduce 36
	RETURN  reduce 36
	WHILE  reduce 36
	REPEAT  reduce 36
	FOR  reduce 36
	CASE  reduce 36

	stmts  goto 39
	stmt_list  goto 40
	stmt  goto 41
	line  goto 42


state 27
	decl_list : decl decl_list .  (4)

	.  reduce 4


state 28
	proc_decl : proc_heading SEMI . block SEMI  (20)
	decl_list : .  (3)

	CONST  shift 3
	PROC  shift 4
	TYPE  shift 5
	VAR  shift 6
	BEGIN  reduce 3

	block  goto 43
	decl_list  goto 9
	decl  goto 10
	proc_decl  goto 11
	proc_heading  goto 12


state 29
	const_decl : IDENT EQUAL . expr SEMI  (11)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 51
	name  goto 52
	variable  goto 53


state 30
	const_decls : const_decl const_decls .  (10)

	.  reduce 10


state 31
	params : LPAR . RPAR  (22)
	params : LPAR . formal_decls RPAR  (23)

	IDENT  shift 21
	RPAR  shift 54
	PROC  shift 4
	VAR  shift 55
	.  error

	ident_list  goto 56
	proc_heading  goto 57
	formal_decls  goto 58
	formal_decl  goto 59


state 32
	proc_heading : PROC name params . return_type  (21)
	return_type : .  (29)

	COLON  shift 60
	SEMI  reduce 29
	RPAR  reduce 29

	return_type  goto 61


state 33
	type_decl : IDENT EQUAL . typexpr SEMI  (14)

	IDENT  shift 16
	ARRAY  shift 62
	RECORD  shift 63
	POINTER  shift 64
	.  error

	typexpr  goto 65
	name  goto 66


state 34
	type_decls : type_decl type_decls .  (13)

	.  reduce 13


state 35
	ident_list : IDENT COMMA . ident_list  (55)

	IDENT  shift 21
	.  error

	ident_list  goto 67


state 36
	var_decls : var_decl var_decls .  (16)

	.  reduce 16


state 37
	var_decl : ident_list COLON . reg typexpr SEMI  (17)
	reg : .  (18)

	REG  shift 68
	IDENT  reduce 18
	ARRAY  reduce 18
	RECORD  reduce 18
	POINTER  reduce 18

	reg  goto 69


state 38
	stmt : IMPOSSIBLE .  (35)

	.  reduce 35


state 39
	block : decl_list BEGIN stmts . END  (2)

	END  shift 70
	.  error


state 40
	stmts : stmt_list .  (31)

	.  reduce 31


state 41
	stmt_list : stmt .  (32)
	stmt_list : stmt . SEMI stmt_list  (33)

	SEMI  shift 71
	VBAR  reduce 32
	ELSE  reduce 32
	END  reduce 32
	UNTIL  reduce 32
	ELSIF  reduce 32


state 42
	stmt : line . stmt1  (34)
	stmt1 : .  (37)

	IDENT  shift 16
	IF  shift 72
	RETURN  shift 73
	WHILE  shift 74
	REPEAT  shift 75
	FOR  shift 76
	CASE  shift 77
	SEMI  reduce 37
	VBAR  reduce 37
	ELSE  reduce 37
	END  reduce 37
	UNTIL  reduce 37
	ELSIF  reduce 37

	name  goto 78
	stmt1  goto 79
	variable  goto 80


state 43
	proc_decl : proc_heading SEMI block . SEMI  (20)

	SEMI  shift 81
	.  error


state 44
	expr : NUMBER .  (59)

	.  reduce 59


state 45
	expr : CHAR .  (61)

	.  reduce 61


state 46
	expr : STRING .  (60)

	.  reduce 60


state 47
	expr : LPAR . expr RPAR  (71)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 82
	name  goto 52
	variable  goto 53


state 48
	expr : MINUS . expr  (65)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 83
	name  goto 52
	variable  goto 53


state 49
	expr : NOT . expr  (64)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 84
	name  goto 52
	variable  goto 53


state 50
	expr : NIL .  (62)

	.  reduce 62


state 51
	const_decl : IDENT EQUAL expr . SEMI  (11)
	expr : expr . MULOP expr  (66)
	expr : expr . ADDOP expr  (67)
	expr : expr . MINUS expr  (68)
	expr : expr . RELOP expr  (69)
	expr : expr . EQUAL expr  (70)

	MULOP  shift 85
	ADDOP  shift 86
	RELOP  shift 87
	SEMI  shift 88
	EQUAL  shift 89
	MINUS  shift 90
	.  error


state 52
	expr : name . actuals  (63)
	variable : name .  (76)

	LPAR  shift 91
	MULOP  reduce 76
	ADDOP  reduce 76
	RELOP  reduce 76
	SEMI  reduce 76
	DOT  reduce 76
	COLON  reduce 76
	RPAR  reduce 76
	COMMA  reduce 76
	SUB  reduce 76
	BUS  reduce 76
	EQUAL  reduce 76
	MINUS  reduce 76
	VBAR  reduce 76
	ARROW  reduce 76
	DO  reduce 76
	ELSE  reduce 76
	END  reduce 76
	OF  reduce 76
	THEN  reduce 76
	TO  reduce 76
	UNTIL  reduce 76
	ELSIF  reduce 76

	actuals  goto 92


state 53
	expr : variable .  (58)
	variable : variable . SUB expr BUS  (77)
	variable : variable . DOT name  (78)
	variable : variable . ARROW  (79)

	DOT  shift 93
	SUB  shift 94
	ARROW  shift 95
	MULOP  reduce 58
	ADDOP  reduce 58
	RELOP  reduce 58
	SEMI  reduce 58
	COLON  reduce 58
	RPAR  reduce 58
	COMMA  reduce 58
	BUS  reduce 58
	EQUAL  reduce 58
	MINUS  reduce 58
	VBAR  reduce 58
	DO  reduce 58
	ELSE  reduce 58
	END  reduce 58
	OF  reduce 58
	THEN  reduce 58
	TO  reduce 58
	UNTIL  reduce 58
	ELSIF  reduce 58


state 54
	params : LPAR RPAR .  (22)

	.  reduce 22


state 55
	formal_decl : VAR . ident_list COLON typexpr  (27)

	IDENT  shift 21
	.  error

	ident_list  goto 96


state 56
	formal_decl : ident_list . COLON typexpr  (26)

	COLON  shift 97
	.  error


state 57
	formal_decl : proc_heading .  (28)

	.  reduce 28


state 58
	params : LPAR formal_decls . RPAR  (23)

	RPAR  shift 98
	.  error


state 59
	formal_decls : formal_decl .  (24)
	formal_decls : formal_decl . SEMI formal_decls  (25)

	SEMI  shift 99
	RPAR  reduce 24


state 60
	return_type : COLON . typexpr  (30)

	IDENT  shift 16
	ARRAY  shift 62
	RECORD  shift 63
	POINTER  shift 64
	.  error

	typexpr  goto 100
	name  goto 66


state 61
	proc_heading : PROC name params return_type .  (21)

	.  reduce 21


state 62
	typexpr : ARRAY . expr OF typexpr  (81)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 101
	name  goto 52
	variable  goto 53


state 63
	typexpr : RECORD . fields END  (82)

	IDENT  shift 21
	.  error

	ident_list  goto 102
	fields  goto 103
	field_decl  goto 104


state 64
	typexpr : POINTER . TO typexpr  (83)

	TO  shift 105
	.  error


state 65
	type_decl : IDENT EQUAL typexpr . SEMI  (14)

	SEMI  shift 106
	.  error


state 66
	typexpr : name .  (80)

	.  reduce 80


state 67
	ident_list : IDENT COMMA ident_list .  (55)

	.  reduce 55


state 68
	reg : REG .  (19)

	.  reduce 19


state 69
	var_decl : ident_list COLON reg . typexpr SEMI  (17)

	IDENT  shift 16
	ARRAY  shift 62
	RECORD  shift 63
	POINTER  shift 64
	.  error

	typexpr  goto 107
	name  goto 66


state 70
	block : decl_list BEGIN stmts END .  (2)

	.  reduce 2


state 71
	stmt_list : stmt SEMI . stmt_list  (33)
	line : .  (36)

	IMPOSSIBLE  shift 38
	IDENT  reduce 36
	SEMI  reduce 36
	VBAR  reduce 36
	ELSE  reduce 36
	END  reduce 36
	IF  reduce 36
	RETURN  reduce 36
	WHILE  reduce 36
	REPEAT  reduce 36
	UNTIL  reduce 36
	FOR  reduce 36
	ELSIF  reduce 36
	CASE  reduce 36

	stmt_list  goto 108
	stmt  goto 41
	line  goto 42


state 72
	stmt1 : IF . expr THEN stmts elses END  (41)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 109
	name  goto 52
	variable  goto 53


state 73
	stmt1 : RETURN . expr_opt  (40)
	expr_opt : .  (56)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	SEMI  reduce 56
	VBAR  reduce 56
	ELSE  reduce 56
	END  reduce 56
	UNTIL  reduce 56
	ELSIF  reduce 56

	expr  goto 110
	name  goto 52
	variable  goto 53
	expr_opt  goto 111


state 74
	stmt1 : WHILE . expr DO stmts END  (42)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 112
	name  goto 52
	variable  goto 53


state 75
	stmt1 : REPEAT . stmts UNTIL expr  (43)
	line : .  (36)

	IMPOSSIBLE  shift 38
	IDENT  reduce 36
	SEMI  reduce 36
	IF  reduce 36
	RETURN  reduce 36
	WHILE  reduce 36
	REPEAT  reduce 36
	UNTIL  reduce 36
	FOR  reduce 36
	CASE  reduce 36

	stmts  goto 113
	stmt_list  goto 40
	stmt  goto 41
	line  goto 42


state 76
	stmt1 : FOR . name ASSIGN expr TO expr DO stmts END  (44)

	IDENT  shift 16
	.  error

	name  goto 114


state 77
	stmt1 : CASE . expr OF arms else_part END  (45)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 115
	name  goto 52
	variable  goto 53


state 78
	stmt1 : name . actuals  (39)
	variable : name .  (76)

	LPAR  shift 91
	DOT  reduce 76
	SUB  reduce 76
	ASSIGN  reduce 76
	ARROW  reduce 76

	actuals  goto 116


state 79
	stmt : line stmt1 .  (34)

	.  reduce 34


state 80
	stmt1 : variable . ASSIGN expr  (38)
	variable : variable . SUB expr BUS  (77)
	variable : variable . DOT name  (78)
	variable : variable . ARROW  (79)

	DOT  shift 93
	SUB  shift 94
	ASSIGN  shift 117
	ARROW  shift 95
	.  error


state 81
	proc_decl : proc_heading SEMI block SEMI .  (20)

	.  reduce 20


state 82
	expr : expr . MULOP expr  (66)
	expr : expr . ADDOP expr  (67)
	expr : expr . MINUS expr  (68)
	expr : expr . RELOP expr  (69)
	expr : expr . EQUAL expr  (70)
	expr : LPAR expr . RPAR  (71)

	MULOP  shift 85
	ADDOP  shift 86
	RELOP  shift 87
	RPAR  shift 118
	EQUAL  shift 89
	MINUS  shift 90
	.  error


state 83
	expr : MINUS expr .  (65)
	expr : expr . MULOP expr  (66)
	expr : expr . ADDOP expr  (67)
	expr : expr . MINUS expr  (68)
	expr : expr . RELOP expr  (69)
	expr : expr . EQUAL expr  (70)

	.  reduce 65


state 84
	expr : NOT expr .  (64)
	expr : expr . MULOP expr  (66)
	expr : expr . ADDOP expr  (67)
	expr : expr . MINUS expr  (68)
	expr : expr . RELOP expr  (69)
	expr : expr . EQUAL expr  (70)

	.  reduce 64


state 85
	expr : expr MULOP . expr  (66)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 119
	name  goto 52
	variable  goto 53


state 86
	expr : expr ADDOP . expr  (67)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 120
	name  goto 52
	variable  goto 53


state 87
	expr : expr RELOP . expr  (69)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 121
	name  goto 52
	variable  goto 53


state 88
	const_decl : IDENT EQUAL expr SEMI .  (11)

	.  reduce 11


state 89
	expr : expr EQUAL . expr  (70)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 122
	name  goto 52
	variable  goto 53


state 90
	expr : expr MINUS . expr  (68)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 123
	name  goto 52
	variable  goto 53


state 91
	actuals : LPAR . RPAR  (72)
	actuals : LPAR . expr_list RPAR  (73)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	RPAR  shift 124
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 125
	name  goto 52
	variable  goto 53
	expr_list  goto 126


state 92
	expr : name actuals .  (63)

	.  reduce 63


state 93
	variable : variable DOT . name  (78)

	IDENT  shift 16
	.  error

	name  goto 127


state 94
	variable : variable SUB . expr BUS  (77)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 128
	name  goto 52
	variable  goto 53


state 95
	variable : variable ARROW .  (79)

	.  reduce 79


state 96
	formal_decl : VAR ident_list . COLON typexpr  (27)

	COLON  shift 129
	.  error


state 97
	formal_decl : ident_list COLON . typexpr  (26)

	IDENT  shift 16
	ARRAY  shift 62
	RECORD  shift 63
	POINTER  shift 64
	.  error

	typexpr  goto 130
	name  goto 66


state 98
	params : LPAR formal_decls RPAR .  (23)

	.  reduce 23


state 99
	formal_decls : formal_decl SEMI . formal_decls  (25)

	IDENT  shift 21
	PROC  shift 4
	VAR  shift 55
	.  error

	ident_list  goto 56
	proc_heading  goto 57
	formal_decls  goto 131
	formal_decl  goto 59


state 100
	return_type : COLON typexpr .  (30)

	.  reduce 30


state 101
	expr : expr . MULOP expr  (66)
	expr : expr . ADDOP expr  (67)
	expr : expr . MINUS expr  (68)
	expr : expr . RELOP expr  (69)
	expr : expr . EQUAL expr  (70)
	typexpr : ARRAY expr . OF typexpr  (81)

	MULOP  shift 85
	ADDOP  shift 86
	RELOP  shift 87
	EQUAL  shift 89
	MINUS  shift 90
	OF  shift 132
	.  error


state 102
	field_decl : ident_list . COLON typexpr  (86)

	COLON  shift 133
	.  error


state 103
	typexpr : RECORD fields . END  (82)

	END  shift 134
	.  error


state 104
	fields : field_decl . opt_semi  (84)
	fields : field_decl . SEMI fields  (85)
	opt_semi : .  (88)

	SEMI  shift 135
	END  reduce 88

	opt_semi  goto 136


state 105
	typexpr : POINTER TO . typexpr  (83)

	IDENT  shift 16
	ARRAY  shift 62
	RECORD  shift 63
	POINTER  shift 64
	.  error

	typexpr  goto 137
	name  goto 66


state 106
	type_decl : IDENT EQUAL typexpr SEMI .  (14)

	.  reduce 14


state 107
	var_decl : ident_list COLON reg typexpr . SEMI  (17)

	SEMI  shift 138
	.  error


state 108
	stmt_list : stmt SEMI stmt_list .  (33)

	.  reduce 33


state 109
	stmt1 : IF expr . THEN stmts elses END  (41)
	expr : expr . MULOP expr  (66)
	expr : expr . ADDOP expr  (67)
	expr : expr . MINUS expr  (68)
	expr : expr . RELOP expr  (69)
	expr : expr . EQUAL expr  (70)

	MULOP  shift 85
	ADDOP  shift 86
	RELOP  shift 87
	EQUAL  shift 89
	MINUS  shift 90
	THEN  shift 139
	.  error


state 110
	expr_opt : expr .  (57)
	expr : expr . MULOP expr  (66)
	expr : expr . ADDOP expr  (67)
	expr : expr . MINUS expr  (68)
	expr : expr . RELOP expr  (69)
	expr : expr . EQUAL expr  (70)

	MULOP  shift 85
	ADDOP  shift 86
	RELOP  shift 87
	EQUAL  shift 89
	MINUS  shift 90
	SEMI  reduce 57
	VBAR  reduce 57
	ELSE  reduce 57
	END  reduce 57
	UNTIL  reduce 57
	ELSIF  reduce 57


state 111
	stmt1 : RETURN expr_opt .  (40)

	.  reduce 40


state 112
	stmt1 : WHILE expr . DO stmts END  (42)
	expr : expr . MULOP expr  (66)
	expr : expr . ADDOP expr  (67)
	expr : expr . MINUS expr  (68)
	expr : expr . RELOP expr  (69)
	expr : expr . EQUAL expr  (70)

	MULOP  shift 85
	ADDOP  shift 86
	RELOP  shift 87
	EQUAL  shift 89
	MINUS  shift 90
	DO  shift 140
	.  error


state 113
	stmt1 : REPEAT stmts . UNTIL expr  (43)

	UNTIL  shift 141
	.  error


state 114
	stmt1 : FOR name . ASSIGN expr TO expr DO stmts END  (44)

	ASSIGN  shift 142
	.  error


state 115
	stmt1 : CASE expr . OF arms else_part END  (45)
	expr : expr . MULOP expr  (66)
	expr : expr . ADDOP expr  (67)
	expr : expr . MINUS expr  (68)
	expr : expr . RELOP expr  (69)
	expr : expr . EQUAL expr  (70)

	MULOP  shift 85
	ADDOP  shift 86
	RELOP  shift 87
	EQUAL  shift 89
	MINUS  shift 90
	OF  shift 143
	.  error


state 116
	stmt1 : name actuals .  (39)

	.  reduce 39

